# hrmonitor

./: LICENSE  README.md  package-lock.json  package.json  svelte.config.js
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  plugin.rs
src-tauri/src/plugin/: hr.rs
src/lib/: chart.svelte  heartrate.svelte
src/routes/: __layout.svelte  index.svelte
