[package]
name = "hrmonitor"
version = "0.1.0"
description = "Heart rate monitor app built with Tauri & SvelteKit"
authors = ["Urho Laukkarinen <urho.laukkarinen@gmail.com>"]
license = "MIT"
edition = "2021"
build = "src/build.rs"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.3" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
tokio = { version = "1.11.0", features = ["full"] }
log = "0.4.14"
env_logger = "0.9.0"
futures = "0.3.17"
bleasy = "0.1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
